# epiq

./: .gitignore  README.md
part1/: CMakeLists.txt
part1/src/: platform_temp_manager.cpp  platform_temp_manager.h
part2/: CMakeLists.txt
part2/src/: gpio_lib.cpp  gpio_lib.h  tmp125_driver.cpp  tmp125_driver.h
part2/test/: CMakeLists.txt  test_tmp125_driver.cpp
